// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-dropdown can be positioned 1`] = `
<sc-dropdown close-on-select="" placement="bottom-start">
  <mock:shadow-root>
    <div class="dropdown" part="base">
      <span aria-expanded="false" aria-haspopup="true" class="dropdown__trigger" part="trigger">
        <slot name="trigger"></slot>
      </span>
      <div class="dropdown__positioner">
        <div aria-orientation="vertical" class="dropdown__panel position--top-left" part="panel" tabindex="-1">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</sc-dropdown>
`;

exports[`sc-dropdown can be positioned 2`] = `
<sc-dropdown close-on-select="" placement="bottom-start">
  <mock:shadow-root>
    <div class="dropdown" part="base">
      <span aria-expanded="false" aria-haspopup="true" class="dropdown__trigger" part="trigger">
        <slot name="trigger"></slot>
      </span>
      <div class="dropdown__positioner">
        <div aria-orientation="vertical" class="dropdown__panel position--top-right" part="panel" tabindex="-1">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</sc-dropdown>
`;

exports[`sc-dropdown can be positioned 3`] = `
<sc-dropdown close-on-select="" placement="bottom-start">
  <mock:shadow-root>
    <div class="dropdown" part="base">
      <span aria-expanded="false" aria-haspopup="true" class="dropdown__trigger" part="trigger">
        <slot name="trigger"></slot>
      </span>
      <div class="dropdown__positioner">
        <div aria-orientation="vertical" class="dropdown__panel position--bottom-left" part="panel" tabindex="-1">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</sc-dropdown>
`;

exports[`sc-dropdown can be positioned 4`] = `
<sc-dropdown close-on-select="" placement="bottom-start">
  <mock:shadow-root>
    <div class="dropdown" part="base">
      <span aria-expanded="false" aria-haspopup="true" class="dropdown__trigger" part="trigger">
        <slot name="trigger"></slot>
      </span>
      <div class="dropdown__positioner">
        <div aria-orientation="vertical" class="dropdown__panel position--bottom-right" part="panel" tabindex="-1">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</sc-dropdown>
`;

exports[`sc-dropdown renders 1`] = `
<sc-dropdown close-on-select="" placement="bottom-start">
  <mock:shadow-root>
    <div class="dropdown" part="base">
      <span aria-expanded="false" aria-haspopup="true" class="dropdown__trigger" part="trigger">
        <slot name="trigger"></slot>
      </span>
      <div class="dropdown__positioner">
        <div aria-orientation="vertical" class="dropdown__panel" part="panel" tabindex="-1">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</sc-dropdown>
`;
